# squishy-platformer

./: Cargo.toml
squishy_game/: Cargo.toml
squishy_game/src/: main.rs
squishy_lib/: Cargo.toml
squishy_lib/src/: lib.rs
squishy_lib/src/gui/: mod.rs
squishy_lib/src/rendering/: mod.rs
squishy_lib/src/simulation/: components.rs  mod.rs
