[package]
name = "squishy_lib"
version = "0.1.0"
edition = "2024"
license = ""
authors = ["Tadeusz Pawlonka <tadeuszpawlonka@gmail.com>"]


[dependencies]
bevy = "0.15.0"
bevy_panorbit_camera = "0.21.2"
bevy_rapier3d = { version = "0.28.0", features = ["debug-render-3d"] }
bevy_infinite_grid = "0.14.0"
